# ypy

./: .gitignore  Cargo.toml  README.md  environment-dev.yml  pyproject.toml  setup.cfg  y_py.pyi
.github/workflows/: test.yml  wasm-wheel.yaml  wheels.yml
docs/: conf.py  index.rst  installation.rst  modules.rst  requirements.txt  tutorial.rst
examples/database-adapter/: README.md  client.py  demo.py  server.py  text_editor.py
examples/drawing/: README.md  client.py  demo.py  draw.py  requirements.txt  server.py
examples/websocket-provider/: README.md  client.py  config.json  draw.py  main.py  requirements.txt  server.py  utils.py
src/: json_builder.rs  lib.rs  shared_types.rs  type_conversions.rs  y_array.rs  y_doc.rs  y_map.rs  y_text.rs  y_transaction.rs  y_xml.rs
tests/: conftest.py  test_helper.py  test_lexical_parse.py  test_type_conversion.py  test_y_array.py  test_y_doc.py  test_y_map.py  test_y_text.py  test_y_transaction.py  test_y_xml.py
tests/ypy_yjs/: package.json  test_ypy_yjs.py  yjs_client.js  ypy_server.py
y_py/: __init__.py  websocket_provider.py  yutils.py
