[package]
name = "y-py"
version = "0.7.0-alpha.1"
rust-version = "1.72"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "y_py"
crate-type = ["cdylib"]

[dependencies]
lib0 = "0.16.10"
yrs = "0.16.10"

[dependencies.pyo3]
version = "0.19.2"
features = ["extension-module"]
