[package]
name = "y-py"
version = "0.7.0-alpha.1"
rust-version = "1.72"
edition = "2021"

[features]
sync = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "y_py"
crate-type = ["cdylib"]

[dependencies]
yrs = "0.21.3"

[dependencies.pyo3]
version = "0.19.2"
features = ["extension-module"]
